# tpe_sia_2025_tp4

./: .gitignore  README.md  Session.vim  hopfield_main.py  main.py  oja_main.py  pyproject.toml
configs/: hopfield_defaults.json  hopfield_defaults_o.json  hopfield_defaults_v.json  kohonen_defaults.json  kohonen_hex_para_entregar.json  kohonen_lr0.1_5x5_stochastic.json  kohonen_para_entregar.json  oja_defaults.json
ejercicio_obligatorio/: main.py
src/: __init__.py  hopfield.py  hopfield_plots.py  kohonen.py  oja.py  oja_plots.py  plots.py  utils.py
src/hopfield/: hopfield_comparison.py  hopfield_main.py  hopfield_network.py  hopfield_plots.py  main.py
src/kohonen/: __init__.py  kohonen_analysis.py  kohonen_comparison.py  kohonen_main.py  kohonen_network.py  kohonen_plots.py  main.py  network.py  plots.py
src/oja/: network.py  oja_comparison.py  oja_main.py  oja_network.py
src/tpe_sia_2025_tp4.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
